# filib

./: .gitignore  CMakeLists.txt  README
cmake/: filibUtils.cmake
filib/: CMakeLists.txt  interval.hpp
tests/: CMakeLists.txt
tests/bisection/: CMakeLists.txt  bisection.C
tests/comp_exp/: CMakeLists.txt  comp_exp.c
tests/comp_sin/: CMakeLists.txt  comp_sin.c
tests/fi_test/: CMakeLists.txt  fi_test.c
tests/hornerc/: CMakeLists.txt  hornerc.c
tests/hornercpp/: CMakeLists.txt  hornercpp.C
tests/xinewton/: CMakeLists.txt  xinewton.C  xinterval.hpp
